--- a/react-portfolio/src/data/projects.json
+++ b/react-portfolio/src/data/projects.json
@@ -3,7 +3,7 @@
       "title": "Project A",
       "imageSrc": "projects/project.png",
       "description": "This is a project made to learn the latest languages by building an app.",
-      "skills": ["React", "Express", "Node"],
+      "skills": ["React"],
       "demo": "https://www.example.com",
       "source": "https://www.github.com"
     },
@@ -11,7 +11,7 @@
       "title": "Project B",
       "imageSrc": "projects/project.png",
       "description": "This is a project made to learn the latest languages by building an app.",
-      "skills": ["React", "Express", "Node", "Sass"],
+      "skills": ["React"],
       "demo": "https://www.example.com",
       "source": "https://www.github.com"
     },
@@ -19,7 +19,7 @@
       "title": "Project C",
       "imageSrc": "projects/project.png",
       "description": "This is a project made to learn the latest languages by building an app.",
-      "skills": ["React", "Express", "Node"],
+      "skills": ["React"],
       "demo": "https://www.example.com",
       "source": "https://www.github.com"
     }
