--- a/react-portfolio/src/data/projects.json
+++ b/react-portfolio/src/data/projects.json
@@ -1,19 +1,19 @@
 [
     {
-      "title": "Project A",
+      "title": "Coffee Project",
       "imageSrc": "projects/project.png",
       "description": "This is a project made to learn the latest languages by building an app.",
       "skills": ["React"],
-      "demo": "https://www.example.com",
-      "source": "https://www.github.com"
+      "demo": "https://mark19242.github.io/coffee-project/",
+      "source": "https://github.com/mark19242/coffee-project"
     },
     {
-      "title": "Project B",
+      "title": "Tic-Tac-Toe",
       "imageSrc": "projects/project.png",
       "description": "This is a project made to learn the latest languages by building an app.",
       "skills": ["React"],
-      "demo": "https://www.example.com",
-      "source": "https://www.github.com"
+      "demo": "https://3000-mark19242-tictactoetict-xpr7hrff2o1.ws-us110.gitpod.io/",
+      "source": "https://github.com/mark19242/tic-tac-toe-tictactoe-seth-mark"
     },
     {
       "title": "Project C",
