--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/outfit": "^5.0.12",
     "@fontsource/roboto": "^5.0.12",
+    "express": "^4.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
