--- a/react-portfolio/src/data/projects.json
+++ b/react-portfolio/src/data/projects.json
@@ -1,8 +1,8 @@
 [
   {
-    "title": "Coffee Project",
+    "title": "Sole Brew",
     "imageSrc": "projects/solebrew.png",
-    "description": "This is a project made to learn the latest languages by building an app.",
+    "description": "This is a project where it is a sneakerhead inspired coffee shop.",
     "skills": ["Javascript", "HTML", "CSS"],
     "demo": "https://mark19242.github.io/coffee-project/",
     "source": "https://github.com/mark19242/coffee-project"
@@ -10,16 +10,16 @@
   {
     "title": "Tic-Tac-Toe",
     "imageSrc": "projects/tictactoe.png",
-    "description": "This is a project made to learn the latest languages by building an app.",
+    "description": "This is a project is a functional two player Tic-Tac-Toe game.",
     "skills": ["React", "Node", "CSS"],
     "demo": "https://tic-tac-toe-tictactoe-seth-mark.onrender.com/",
     "source": "https://github.com/mark19242/tic-tac-toe-tictactoe-seth-mark"
   },
   {
-    "title": "Project C",
+    "title": "Spooky Space",
     "imageSrc": "projects/SpookySpaceImg.png",
-    "description": "This is a project made to learn the latest languages by building an app.",
-    "skills": ["React", "Ruby On Rails"],
+    "description": "This is a full-stack project with a functional backend and API, where fans of horror movies can share thier thoughts.",
+    "skills": ["React", "Ruby On Rails", "API"],
     "demo": "https://spooky-space-frontend.onrender.com/",
     "source": "https://github.com/mark19242/spooky-space-frontend"
   }
